# placeHolderProject

./: .env  .env.sample  Dockerfile  README.md  StubProjects.postman_collection.json  docker-compose.yml  pyproject.toml  servers.json
app/: constants.py  main.py
app/drivers/cache/: base.py  deps.py  redis.py
app/drivers/configs/: config.py
app/drivers/db/: base.py  deps.py  migrations.py  mongo.py  postgres.py
app/interfaces/: evaluator_engine.py  file_parser.py  hiring_processor.py  llm_wrapper.py  prompt_exec.py  sensitive_data_checker.py
app/migrations/: 02_create_base_table.sql  03_create_tierlist_db.sql
app/models/: AnnotatedFormData.py  FormData.py
app/repos/: deps.py
app/repos/evaluator_engine/: evaluator_engine.py
app/repos/field_population/: field_populator.py
app/repos/file_parser/: file_parser_impl.py
app/repos/form_manager/: annotated_form_example.py  dummy_form_instance_test.py  form_transformation.py  test_json.py
app/repos/hiring_processor/: hiring_processor_impl.py
app/repos/llm_wrapper/: llm_openai_impl.py
app/repos/openai_impl/: llm_openai_impl.py
app/repos/prompt_exec/: prompt_processor.py  prompts.py
app/repos/sensitive_data_checker/: deps.py  sdc_impl.py
app/routers/: base_router.py  bonsen_demo_router.py  instead_demo_router.py  unbound_demo_router.py
app/schemas/: GetCompletionReq.py  get_completion_reqs.py  jd_criteria.py  resume_eval_result.py  ub_process_data_req.py
app/tests/: test_file_parser.py
