[project]
name = "app"
version = "0.1.0"
description = ""
authors = [
    {name = "ankeshkmr2010",email = "ankeshkmr2010@gmail.com"}
]

# Tell Poetry where to find your package code:
packages = [
  { include = "app" }
]

readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

